Adding new features
-Context Menu Options:
--Transparency Grid
--Solid Color
--Disabled
--Color Selector

-The solid color can be selected with a nice little color picker provided
 by the jQuery plugin, Spectrum (http://bgrins.github.io/spectrum/).

-Options are saved to localStorage so they will persist.

-Additional checks were added to ensure that pages such as a GitHub image
 viewer that ends in a .jpg/.png/.gif do not alter the body background but
 simply add a class to the img elements on the page to alter their
 backgrounds.

-Namespaced the classes to help prevent any potential overlap with page
 classes.

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,36 @@
 {
-   "manifest_version": 2,
-   "content_scripts": [ {
-      "css": [ "image-alpha.css" ],
-      "matches": [ "http://*/*.png*", "file:///*/*.png*", "https://*/*.png*" ]
-   } ],
-	"description": "Places a transparency grid in image viewing html",
-   "name": "ImageAlpha",
-   "version": "1.0"
+  "manifest_version": 2,
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
+  },
+  "content_scripts": [
+    {
+      "css": [
+        "spectrum.css",
+        "image-alpha.css"
+      ],
+      "matches": [
+        "http://*/*.png*",
+        "file:///*/*.png*",
+        "https://*/*.png*"
+      ],
+      "js": [
+        "jquery-1.11.3.min.js",
+        "spectrum.js",
+        "content.js"
+      ]
+    }
+  ],
+  "description": "Places a transparency grid in image viewing html",
+  "name": "ImageAlpha",
+  "version": "1.0",
+  "permissions": [
+    "tabs",
+    "contextMenus"
+  ],
+  "icons": {
+    "64": "icon64.png"
+  }
 }
